--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/carousel.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -27,10 +28,9 @@
   <body>
 
     <div class="container">
-
       <!-- Static navbar -->
-      <nav class="navbar navbar-default">
-        <div class="container-fluid">
+    	<nav class="navbar navbar-default">
+        	<div class="container-fluid">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
               <span class="sr-only">Toggle navigation</span>
@@ -52,119 +52,129 @@
               </li>
             </ul>
           </div><!--/.nav-collapse -->
-        </div><!--/.container-fluid -->
-      </nav>
+        	</div><!--/.container-fluid -->
+    	</nav>
 
       <!-- Main component for a primary marketing message or call to action -->
-      <div class="jumbotron">
-        <h1>Checkout Teardown</h1>
-        <p>A lot of my time is spent thinking about commerce experiences and one of the most important parts of that is the checkout experience.</p>
+    	<div class="jumbotron">
+        	<h1>Checkout Teardown</h1>
+        	<h4>Disassembling the ecommerce checkout experience and thoughts on usability.</h4>
+    	</div><!-- /jumbotron -->
 
-      </div>
-      <div>
-        <h2>Recent Teardowns</h2>
-        <a href="vans.html">
-          <h3>Vans</h3>
-          <img src="vans/vans_logo.jpg">
-        </a>
-        <h2>Vans</h2>
-          <div class="carousel-status">
-          </div>
-          <div id="carousel-example-generic" class="carousel" data-interval="false">
-          	
-            <!-- Indicators -->
-            <ol class="carousel-indicators">
-              <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-              <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-              <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-            </ol>
+    	<div id="current">
+       		<h2>Vans</h2>
+    		<div class="carousel-status">
+      		</div>
+      		<div id="carousel-example-generic" class="carousel" data-interval="false">
+	        	<!-- Indicators -->
+	       		<ol class="carousel-indicators">
+	        		  <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+	        		  <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+	        		  <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+	       		</ol>
 
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner" role="listbox">
-              <div class="item active">
-                <img src="vans/vans_checkout.001.jpg" alt="Vans Checkout">
-              </div>
-              <div class="item">
-                <img src="vans/vans_checkout.002.jpg" alt="Vans Checkout">
-              </div>
-              <div class="item">
-                <img src="vans/vans_checkout.003.jpg" alt="Vans Checkout">
-              </div>
-              <div class="item">
-                <img src="vans/vans_checkout.004.jpg" alt="Vans Checkout">
-              </div>
-              <div class="item">
-                <img src="vans/vans_checkout.005.jpg" alt="Vans Checkout">
-              </div>
-              <div class="item"><img src="vans/vans_checkout.006.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.007.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.008.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.009.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.010.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.011.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.012.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.013.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.014.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.015.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.016.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.017.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.018.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.019.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.020.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.021.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.022.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.023.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.024.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.025.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.026.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.027.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.028.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.029.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.030.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.031.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.032.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.033.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.034.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.035.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.036.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.037.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.038.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.039.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.040.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.041.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.042.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.043.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.044.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.045.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.046.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.047.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.048.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.049.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.050.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.051.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.052.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.053.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.054.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.055.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.056.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.057.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.058.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.059.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.060.jpg" alt="Vans Checkout"></div>
-              <div class="item"><img src="vans/vans_checkout.061.jpg" alt="Vans Checkout"></div>
-            </div>
+	            <!-- Wrapper for slides -->
+	            <div class="carousel-inner" role="listbox">
+	              <div class="item active">
+	                <img src="vans/vans_checkout.001.jpg" alt="Vans Checkout">
+	              </div>
+	              <div class="item">
+	                <img src="vans/vans_checkout.002.jpg" alt="Vans Checkout">
+	              </div>
+	              <div class="item">
+	                <img src="vans/vans_checkout.003.jpg" alt="Vans Checkout">
+	              </div>
+	              <div class="item">
+	                <img src="vans/vans_checkout.004.jpg" alt="Vans Checkout">
+	              </div>
+	              <div class="item">
+	                <img src="vans/vans_checkout.005.jpg" alt="Vans Checkout">
+	              </div>
+	              <div class="item"><img src="vans/vans_checkout.006.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.007.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.008.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.009.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.010.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.011.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.012.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.013.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.014.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.015.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.016.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.017.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.018.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.019.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.020.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.021.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.022.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.023.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.024.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.025.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.026.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.027.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.028.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.029.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.030.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.031.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.032.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.033.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.034.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.035.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.036.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.037.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.038.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.039.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.040.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.041.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.042.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.043.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.044.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.045.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.046.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.047.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.048.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.049.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.050.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.051.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.052.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.053.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.054.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.055.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.056.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.057.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.058.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.059.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.060.jpg" alt="Vans Checkout"></div>
+	              <div class="item"><img src="vans/vans_checkout.061.jpg" alt="Vans Checkout"></div>
+	            </div>
 
-            <!-- Controls -->
-            <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-              <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-              <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
-      </div> <!-- /container -->
+	            <!-- Controls -->
+	            <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+	              <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+	              <span class="sr-only">Previous</span>
+	            </a>
+	            <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+	              <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+	              <span class="sr-only">Next</span>
+	            </a>
+	        </div>
+    	</div> <!-- /current -->
+
+    	<div id="recent">
+        	<h3>Recent Teardowns</h3>
+        	<ul class="list-inline">
+        		<li>
+        			<a href="vans.html">
+        	  			<img src="vans/vans_logo.jpg">
+        			</a>
+        		</li>
+        		<li>
+          			<p>more coming soon</p>
+          		</li>
+          	</ul>
+      	</div> <!-- /recent -->
+
+	</div> <!-- /container -->
 
 
     <!-- Bootstrap core JavaScript
