--- a/vans.html
+++ b/vans.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Checkout Teardown</title>
+    <title>Vans, Checkout Teardown</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -43,25 +43,17 @@
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
               <!--<li class="active"><a href="#">Home</a></li>-->
-              <li><a href="about.html">About</a></li>
+              <li><a href="#">About</a></li>
               <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Teardowns <span class="caret"></span></a>
+                <a href="about.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Teardowns <span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
-                  <li><a href="vans.html">Vans</a></li>
+                  <li><a href="#">Vans</a></li>
                 </ul>
               </li>
             </ul>
           </div><!--/.nav-collapse -->
         	</div><!--/.container-fluid -->
     	</nav>
-
-      <!-- Main component for a primary marketing message or call to action -->
-    	<div class="jumbotron">
-        	<h1>Checkout Teardown</h1>
-        	<h4>Disassembling the ecommerce checkout experience and thoughts on usability.</h4>
-        	<a href="about.html" class="btn-lg btn btn-primary">Learn More</a>
-    	</div><!-- /jumbotron -->
-
     	<div id="current">
        		<h2>Vans</h2>
     		<div class="carousel-status">
