added about page copy

--- a/about.html
+++ b/about.html
@@ -55,14 +55,12 @@
         	</div><!--/.container-fluid -->
     	</nav>
 
-      <!-- Main component for a primary marketing message or call to action -->
-    	<div class="jumbotron">
-        	<h1>Checkout Teardown</h1>
-        	<h4>Disassembling the ecommerce checkout experience and thoughts on usability.</h4>
-        	<a href="about.html" class="btn-lg btn btn-primary">Learn More</a>
-    	</div><!-- /jumbotron -->
-
-
+    	<div class="page-header">
+        	<h1>About</h1>
+    	</div>
+      <p class="lead">This is an experiment in disassembling the ecommerce checkout experience piece by piece and commenting on its usability.</p>
+      <p>I'm <a href="http://darlasawler.com">Darla</a> (@dsawler on the internet) and spend most of my time as a Senior IXD at the ecommerce agency Corra. Having worked on tons of projects where every ecomm director says they "want a better checkout" and "just 1 step!" I decided to, in my spare time, evaluate and comment on checkout usability. All of these teardowns are my opinion (backed most of the time by studies from Baymard Institute) and are in no way affiliated with my employer.</p>
+      <br><br><br><br>
 
     	<div id="recent">
         	<h3>Recent Teardowns</h3>
